--- a/src/front/src/Components/App/App.css
+++ b/src/front/src/Components/App/App.css
@@ -4,9 +4,19 @@ html,
   height: 100%;
 }
 
+h1 {
+  background-color:burlywood;
+  text-align: center;
+}
+
 .App {
   height: 100%;
   width: 100%;
+  padding: 5% 10% 0% 10%;
   text-align: center;
-  background-color: darkgray;
+  background-color:burlywood;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+  /* flex-direction: column; */
 }
