refactor: introduced variable square size responsible for height and width of Square and Ship components

--- a/src/front/src/Components/Square/Square.css
+++ b/src/front/src/Components/Square/Square.css
@@ -1,6 +1,6 @@
 .Square {
-  height: 60px;
-  width: 60px;
+  /* height: 60px;
+  width: 60px; */
   /* margin: 1px; */
   border: 1px solid black;
   /* border-collapse: collapse; */
