feat: implemented visual preview of placing ship on the grid, without connection to the API

--- a/src/front/src/Components/Ship/Ship.css
+++ b/src/front/src/Components/Ship/Ship.css
@@ -1,6 +1,6 @@
 .Ship {
   display: flex;
-  background-color:darkolivegreen;
+  /* background-color:darkolivegreen; */
   justify-content: center;
   align-items: center;
 }
