refactor: moved Hint compononent from App to Grid

--- a/src/front/src/Components/Grid/Grid.css
+++ b/src/front/src/Components/Grid/Grid.css
@@ -10,3 +10,9 @@
   width: fit-content;
   border: 1px solid black;
 }
+
+.Grid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
