--- a/src/front/src/Components/App/App.css
+++ b/src/front/src/Components/App/App.css
@@ -25,3 +25,20 @@ h1 {
   flex-direction: column;
   align-items: flex-start;
 }
+
+.PlacementButtons {
+  margin-top: 100px;
+  height: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.Random {
+  margin-top: 10px;
+  height: 50px;
+  width: 200px;
+  background-color: slateblue;
+  border: 1px solid black;
+  box-shadow: 2px 4px 10px 0 rgba(0, 0, 0, 0.25);
+}
