--- a/src/front/src/Components/Grid/Grid.css
+++ b/src/front/src/Components/Grid/Grid.css
@@ -9,6 +9,7 @@
   height: fit-content;
   width: fit-content;
   border: 1px solid black;
+  box-shadow: 4px 8px 20px 5px rgba(0, 0, 0, 0.25);
 }
 
 .Grid {
