--- a/src/front/src/Components/Ship/Ship.css
+++ b/src/front/src/Components/Ship/Ship.css
@@ -3,4 +3,5 @@
   /* background-color:darkolivegreen; */
   justify-content: center;
   align-items: center;
+  box-shadow: 2px 4px 10px 0 rgba(0, 0, 0, 0.25);
 }
