--- a/src/front/src/Components/App/App.css
+++ b/src/front/src/Components/App/App.css
@@ -41,4 +41,10 @@ h1 {
   background-color: slateblue;
   border: 1px solid black;
   box-shadow: 2px 4px 10px 0 rgba(0, 0, 0, 0.25);
+  transition: 300ms;
+}
+
+button:hover {
+  transform: scale(1.1);
+  box-shadow: 2px 4px 50px 0 rgba(0, 0, 0, 0.25);
 }
