--- a/src/front/src/Components/App/App.css
+++ b/src/front/src/Components/App/App.css
@@ -34,14 +34,16 @@ h1 {
   justify-content: space-around;
 }
 
-.Random {
-  margin-top: 10px;
+button {
   height: 50px;
   width: 200px;
-  background-color: slateblue;
   border: 1px solid black;
   box-shadow: 2px 4px 10px 0 rgba(0, 0, 0, 0.25);
   transition: 300ms;
+}
+.Random {
+  margin-top: 10px;
+  background-color: slateblue;
 }
 
 button:hover {
