refactor: moved Hint component up to Home.js to be able to display hints from another source

--- a/src/front/src/Pages/Home/Home.css
+++ b/src/front/src/Pages/Home/Home.css
@@ -25,6 +25,12 @@ h1 {
   justify-content: space-around;
 }
 
+.Center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .Right {
   display: flex;
   flex-direction: column;
