--- a/src/front/src/Components/SharedComponents/Hint/Hint.css
+++ b/src/front/src/Components/SharedComponents/Hint/Hint.css
@@ -4,4 +4,7 @@
   width: 500px;
   height: 50px;
   box-shadow: 2px 4px 10px 0 rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
