--- a/src/front/src/Components/GameComponents/Grid/Grid.css
+++ b/src/front/src/Components/GameComponents/Grid/Grid.css
@@ -1,19 +1,21 @@
 .row {
   display: flex;
   justify-content: center;
+  height: 10%;
+  width: 100%;
 }
 
-.BattleMap {
-  margin: 0;
-  padding: 0;
-  height: fit-content;
-  width: fit-content;
+.GameGrid {
+  padding-bottom: 20%;
+  height: 0%;
   border: 1px solid black;
   box-shadow: 4px 8px 20px 5px rgba(0, 0, 0, 0.25);
+  width: 20%;
+  position: relative;
 }
 
-.Grid {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.GameBattleMap {
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
