--- a/src/front/src/Components/HomeComponents/Fleet/Fleet.css
+++ b/src/front/src/Components/HomeComponents/Fleet/Fleet.css
@@ -1,5 +1,13 @@
 .Fleet {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 20vw;
+  width: 18vw;
+  border: 1px solid black;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5vh;
+  min-width: 250px;
+  min-height: 280px;
 }
