--- a/src/front/src/Components/HomeComponents/NameBar/NameBar.css
+++ b/src/front/src/Components/HomeComponents/NameBar/NameBar.css
@@ -2,7 +2,13 @@
   margin-bottom: 10%;
 }
 input {
-  width: 200px;
-  height: 50px;
+  width: 10vw;
+  height: 2vw;
   box-shadow: 2px 4px 10px 0 rgba(0, 0, 0, 0.25);
+  background-color: rgba(253, 223, 192, 0);
+  color: rgb(230, 202, 50);
+  font-weight: bold;
+  font-size: large;
+  min-width: 150px;
+  min-height: 30px;
 }
