--- a/src/front/src/Components/HomeComponents/Ship/Ship.css
+++ b/src/front/src/Components/HomeComponents/Ship/Ship.css
@@ -1,7 +1,9 @@
 .Ship {
   display: flex;
-  /* background-color:darkolivegreen; */
   justify-content: center;
   align-items: center;
   box-shadow: 2px 4px 10px 0 rgba(0, 0, 0, 0.25);
+  height: 3vw;
+  margin: 1vh;
+  min-height: 35px;
 }
