--- a/src/front/src/Pages/Game/Game.css
+++ b/src/front/src/Pages/Game/Game.css
@@ -1,13 +1,29 @@
+body,
+html,
+#root {
+  height: 100%;
+}
+
 .Map {
-  margin-top: 5%;
+  padding-top: 5%;
   display: flex;
   justify-content: space-around;
   height: 80%;
   width: 100%;
+  align-items: flex-end;
+}
+
+.GamePage {
+  height: 100vh;
+  width: 100vw;
+  background-color: #455456;
 }
 
 .Game {
   height: 100%;
   width: 100%;
-  background-color: burlywood;
+  background-image: url('./background_enlarged.jpg');
+  /* background-size: auto; */
+  background-position: center;
+  background-repeat: no-repeat;
 }
