--- a/src/front/src/Pages/Game/Game.css
+++ b/src/front/src/Pages/Game/Game.css
@@ -23,7 +23,7 @@ html,
   height: 100%;
   width: 100%;
   background-image: url('./background_enlarged.jpg');
-  /* background-size: auto; */
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
