--- a/src/front/src/Components/GameComponents/Chat/Chat.css
+++ b/src/front/src/Components/GameComponents/Chat/Chat.css
@@ -13,8 +13,8 @@
 
 .Input-message {
   width: 17vw;
-  background-color: rgba(255, 255, 255, 0.6);
-  /* border: 1px black; */
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 1px solid black;
 }
 
 .SendButton {
@@ -22,4 +22,5 @@
   width: 3vw;
   height: 2vw;
   border-collapse: collapse;
+  border: 1px solid black;
 }
