--- a/src/front/src/Components/HomeComponents/ButtonLink/ButtonLink.css
+++ b/src/front/src/Components/HomeComponents/ButtonLink/ButtonLink.css
@@ -4,3 +4,8 @@
   min-width: 150px;
   min-height: 45px;
 }
+
+.Play:hover {
+  transform: scale(1);
+  box-shadow: 2px 4px 10px 0 rgba(0, 0, 0, 0.25);
+}
