--- a/src/front/src/Components/GameComponents/Chat/Chat.css
+++ b/src/front/src/Components/GameComponents/Chat/Chat.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 20vw;
-  height: 30vw;
+  height: 27vw;
+  box-shadow: 4px 8px 20px 5px rgba(0, 0, 0, 0.25);
 }
 
 .InputBar {
