--- a/src/front/src/Components/HomeComponents/NameBar/NameBar.css
+++ b/src/front/src/Components/HomeComponents/NameBar/NameBar.css
@@ -1,7 +1,7 @@
 .NameBar {
   margin-bottom: 10%;
 }
-input {
+.nameInput {
   width: 10vw;
   height: 2vw;
   box-shadow: 2px 4px 10px 0 rgba(0, 0, 0, 0.25);
