feat: added captains log to display player moves and info about sinking ship

--- a/src/front/src/Pages/Game/Game.css
+++ b/src/front/src/Pages/Game/Game.css
@@ -27,3 +27,10 @@ html,
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.Left {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: end;
+}
